Bug 531716 - [13] Support for JEP 355 Text Block
Text block processing fails for complicated escaping scenario

Change-Id: I7c5e59c14f8c22ede29cf3a3c514333aeda583d5
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>